zeta-code/cli/tests/snapshots/real/07-lifecycle/03-http-500.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---

    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   openai-compatible/zeta-real-scenario · Access unknown
  ▝▜████▛▘   <FIXTURE>/workspace
    ▝  ▘

> 触发真实 HTTP 500

● Provider request failed (500). Try again later.


















────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────
  zeta-real-scenario
  ⏸ ask permissions on
