zeta-code/cli/tests/snapshots/real/07-lifecycle/04-error-recovered.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 触发真实 HTTP 500

● Provider request failed (500). Try again later.

> 错误以后继续发送

● 错误后仍能继续对话。


















  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ >                                                                                            │
  ╰───────────────────────────────────────────────────────────────────────── zeta-real-scenario ─╯

  Enter send  ·  shift+tab permissions  ·  /home
